# TinySoftRenderer

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  FrameBuffer.cpp  FrameBuffer.h  Geometry.h  Light.h  Math.h  Mesh.h  README.md  Rasterizer.cpp  Rasterizer.h  Texture2D.cpp  Texture2D.h  Timer.h  Window.cpp  Window.h  main.cpp
Dependencies/: stb_image.h
Mesh/: Box.cpp  Mesh.h  ObjModel.cpp  ObjModel.h  Plane.cpp  Plane.h  Triangle.cpp  Triangle.h
Shader/: GouraudShader.cpp  IShader.h  PhongShader.cpp  PhongShader.h  SimpleShader.cpp  SimpleShader.h  TextureShader.cpp
SoftRender/: Camera.h  FrameBuffer.cpp  Geometry.h  Math.h  Texture2D.cpp  Texture2D.h  main.cpp
SoftRender/Mesh/: Box.h  ObjModel.cpp  Plane.cpp  Triangle.cpp
SoftRender/Shader/: GouraudShader.h  PhongShader.cpp  SimpleShader.cpp  TextureShader.cpp  TextureShader.h
tga/: tgaimage.h
